# ai-agentic-graph-reasoning

./: .env  .env.example  .gitignore  LICENSE  README.md  check_env.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.gitignore/: .env
agents/: critic.py  executor.py  planner.py
app/: nodes.py  state.py  utils.py
config/: settings.py
graph/: builder.py  state.py
tests/: test_graph_state.py  test_main.py
utils/: search.py
