[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-agentic-graph-reasoning"
version = "0.1.0"
description = "A graph-based agentic AI system for multi-step reasoning using stateful workflows, planning-execution loops, and tool-integrated decision making."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-groq==0.3.2",
    "langgraph==0.4.5",
    "groq==0.24.0",
    "ddgs==9.5.2",
    "python-dotenv==1.0.1",
    "pydantic==2.11.4",
    "typing-extensions==4.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
agentgraph = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "graph*", "config*", "utils*", "app*"]

# ── Ruff (linter + formatter) ──────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "graph", "config", "utils", "app"]

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
